added uyuni/suma if statements for setup

--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -38,6 +38,30 @@ Some actions are not yet supported:
 
 Some preparation is required on before you can register {ubuntu} clients to {productname} Server.
 
+
+ifeval::[{suma-content} == false]
+. Install spacewalk-utils package
++
+----
+# sudo zypper in spacewalk-utils
+----
+
+. As root add the Ubuntu channels (for example the channels for Ubuntu 18.04)
++
+
+----
+# spacewalk-common-channels ubuntu-1804-pool-amd64 ubuntu-1804-amd64-main ubuntu-1804-amd64-main-update ubuntu-1804-amd64-main-security ubuntu-1804-amd64-universe ubuntu-1804-amd64-uyuni-client
+----
+
+. Synchronize the new custom channels. Check synchronization progress from the command line with:
++
+----
+tailf  /var/log/rhn/reposync/<CHANNEL-NAME>
+----
+endif::[]
+
+
+ifeval::[{suma-content} == true]
 Before you begin, ensure you have the {ubuntu} product enabled, and have synchronized the {ubuntu} channels:
 
 For {ubuntu} 18.04:
@@ -118,7 +142,7 @@ mgr-create-bootstrap-repo --with-custom-channels
 ----
 
 For more information on creating custom repositories, see xref:administration:channel-management.adoc[].
-
+endif::[]
 ////
 // To be enabled once spacewalk-utils support status is clarified
 .Procedure: Preparing to Register {ubuntu} Clients with Spacewalk
