--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -39,7 +39,7 @@ Some actions are not yet supported:
 Some preparation is required on before you can register {ubuntu} clients to {productname} Server.
 
 
-ifeval::[{suma-content} == false]
+ifdef::uyuni-ubuntu[]
 
 . Install spacewalk-utils package
 +
