--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -38,8 +38,10 @@ Some actions are not yet supported:
 
 Some preparation is required on before you can register {ubuntu} clients to {productname} Server.
 
+// ifndef works for displaying content when building uyuni
+// ifdef does not show the content for uyuni
 
-ifndef::uyuni-ubuntu[]
+ifeval::[{uyuni-ubuntu} == true]
 
 . Install spacewalk-utils package
 +
