--- a/modules/administration/pages/master-fingerprint.adoc
+++ b/modules/administration/pages/master-fingerprint.adoc
@@ -13,8 +13,8 @@ salt-key -F master
 ----
 +
 
-On your minion, open the minion configuration file located in [path]``/etc/salt/minion``.
-Uncomment the following line and enter the masters fingerprint replacing the example fingerprint:
+On your minion, open the [path]``/etc/salt/minion`` configuration file. .
+Uncomment the following line and enter the master's fingerprint replacing the example fingerprint:
 +
 
 ----
@@ -28,4 +28,4 @@ master_finger: 'ba:30:65:2a:d6:9e:20:4f:d8:b2:f3:a7:d4:65:11:13'
 # systemctl restart salt-minion
 ----
 
-For more information on configuring security from a minion see: https://docs.saltstack.com/en/latest/ref/configuration/minion.html
+For information on configuring security from a minion, see https://docs.saltstack.com/en/latest/ref/configuration/minion.html.
