cleanup https://github.com/SUSE/spacewalk/issues/8361

--- a/modules/administration/pages/repo-metadata.adoc
+++ b/modules/administration/pages/repo-metadata.adoc
@@ -1,15 +1,12 @@
 [[security-repo-metadata]]
 = Signing Repository Metadata
 
-
-
-
-
+// FIXME
 TODO:: Explain why repository metadata should/would be signed.
 
 You will require a custom GPG key to be able to sign repository metadata.
 
-.Procedure: Generating a custom GPG Key
+.Procedure: Generating a Custom GPG Key
 
 . As the root user, use the [command]``gpg`` command to generate a new key:
 +
@@ -97,4 +94,4 @@ You can do this through the {productname} {webui}, or from the command line on t
 ----
 salt <ubuntu-client> state.apply channels
 ----
-. OPTIONAL: For Salt clients, you might prefer to use  a state to manage your GPG keys.
+. OPTIONAL: For Salt clients, you might prefer to use a state to manage your GPG keys.
