backport from https://github.com/SUSE/doc-susemanager/pull/609

--- a/adoc/reference-webui-admin.adoc
+++ b/adoc/reference-webui-admin.adoc
@@ -448,7 +448,7 @@ The following will help you set up a master ISS server.
 
 image::admin_iss_configuration_master.png[scaledwidth=80%]
 
-Click menu:Admin[>ISS Configuration > Master Setup].
+Click menu:Admin[ISS Configuration > Master Setup].
 In the top right-hand corner of this page, click btn:[Add New Slave]:
 
 image::admin_iss_configuration_edit_slave.png[scaledwidth=80%]
@@ -458,7 +458,7 @@ Fill in the following information:
 * Slave Fully Qualified Domain Name (FQDN)
 * Allow Slave to Sync? Selecting this checkbox will allow the slave {productname} to access this master {productname}.
 Otherwise, contact with this slave will be denied.
-* Sync All Orgs to Slave? Checking this field will synchronize all organizations to the slave {productname}.
+* Sync All Orgs to Slave? Checking this checkbox will synchronize all organizations to the slave {productname}.
 
 
 [NOTE]
@@ -512,7 +512,7 @@ menu:ISS Configuration[Update Master > Master Setup] and fill in the following i
 * Default Master?
 
 Click btn:[Add New Master].
-Once the master and slave servers are configured, start the synchronization on the Master server by executing [command]``mgr-inter-sync``:
+When the master and slave servers are configured, start the synchronization on the slave server by executing [command]``mgr-inter-sync``:
 
 ----
 mgr-inter-sync -c`YOUR-CHANNEL`
