cleanup https://github.com/SUSE/spacewalk/issues/8361

--- a/modules/administration/pages/mirror-sources.adoc
+++ b/modules/administration/pages/mirror-sources.adoc
@@ -1,15 +1,11 @@
 [[security-morror-sources]]
 = Mirror Source Packages
 
-
-
-
-
 If you build your own packages locally, or if you require the source code for your packages for legal reasons, it is possible to mirror the source packages on {productname} Server.
 
 [NOTE]
 ====
-Note that this can consume a significant amount of disk space.
+Mirroring source packages can consume a significant amount of disk space.
 ====
 
 .Procedure: Mirroring Source Packages
