--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -53,10 +53,10 @@ This example is not limited to Kerberos; it is generic and uses the current serv
 Only network based authentication services are supported.
 +
 .Changing Passwords
-IMPORTANT: Changing the password on the SUSE Manager Web interface changes only the local password on the SUSE Manager server.
-But this password may not be used at all if PAM is enabled for that user.
+IMPORTANT: Changing the password on the {productname} {webui} changes only the local password on the {productname} server.
+This password may not be used at all if PAM is enabled for that user.
 In the above example, for instance, the Kerberos password will not be changed.
-+
+
 
 
 
