Use the correct channel names for Ubuntu when using Uyuni

--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -56,9 +56,9 @@ sudo zypper in spacewalk-utils
 +
 
 ----
-sudo spacewalk-common-channels ubuntu-1804-pool-amd64 ubuntu-1804-amd64-main \
-ubuntu-1804-amd64-main-update ubuntu-1804-amd64-main-security \
-ubuntu-1804-amd64-universe ubuntu-1804-amd64-uyuni-client
+sudo spacewalk-common-channels ubuntu-1804-pool-amd64-uyuni ubuntu-1804-amd64-main-uyuni \
+ubuntu-1804-amd64-main-update-uyuni ubuntu-1804-amd64-main-security-uyuni \
+ubuntu-1804-amd64-universe-uyuni ubuntu-1804-amd64-uyuni-client
 ----
 
 . Synchronize the new custom channels. You can check the progress of your synchronization from the command line with this command:
