--- a/modules/administration/pages/public-cloud.adoc
+++ b/modules/administration/pages/public-cloud.adoc
@@ -119,9 +119,8 @@ Start the ``susemanager_setup`` with {yast}:
 ----
 
 
-////
-
-No need to duplicate this, since it exists within the docs suite. LKB 2019-05-29
+// No need to duplicate this, since it exists within the docs suite. LKB 2019-05-29
+// Uncommenting, as it turns out some of this content is unique. Will need a more surgical look. LKB 2019-08-02
 
 Note that the setup of {productname} from this point forward does not differ from the documentation in the https://www.suse.com/documentation/suse_manager[SUSE Manager Guide].
 
