--- a/modules/administration/pages/master-fingerprint.adoc
+++ b/modules/administration/pages/master-fingerprint.adoc
@@ -1,12 +1,9 @@
 [[security-master-fingerprint]]
 = Set up a Client to Master Validation Fingerprint
 
+In highly secure network configurations you may wish to ensure your Salt clients are connecting a specific master.
+To set up validation from client to master enter the master's fingerprint within the [path]``/etc/salt/minion`` configuration file.
 
-
-
-
-In highly secure network configurations you may wish to ensure your clients are connecting a specific master.
-To setup validation from client to master enter the masters fingerprint within the [path]``/etc/salt/minion`` configuration file.
 See the following procedure:
 
 . On the master enter the following command as root and note the fingerprint:
@@ -17,8 +14,8 @@ salt-key -F master
 ----
 +
 
-On your client, open the client configuration file located in [path]``/etc/salt/minion``.
-Uncomment the following line and enter the masters fingerprint replacing the example fingerprint:
+On your client, open the [path]``/etc/salt/minion`` configuration file.
+Uncomment the following line and enter the master's fingerprint replacing the example fingerprint:
 +
 
 ----
@@ -32,4 +29,4 @@ master_finger: 'ba:30:65:2a:d6:9e:20:4f:d8:b2:f3:a7:d4:65:11:13'
 # systemctl restart salt-minion
 ----
 
-For more information on configuring security from a client see: https://docs.saltstack.com/en/latest/ref/configuration/minion.html
+For information on configuring security from a client, see https://docs.saltstack.com/en/latest/ref/configuration/minion.html.
